<resources>
    <string name="app_name">Heady Shopping</string>
    <string name="title_activity_product_details">Product Details</string>
    <string name="browse_category">Browse By Category</string>
    <string name="browse_ranking">Browse By Ranking</string>
    <string name="spinner_color_text">Select Color / Size :</string>
    <string name="spinner_size_text">Available Sizes</string>
    <string name="product_name">Product Name :</string>
    <string name="price">Price :</string>
    <string name="tax">Tax :</string>
    <string name="color">Color :</string>
    <string name="size">Size :</string>
    <string name="total">Amount Payable :</string>
    <string name="cart_title">My Cart</string>
    <string name="my_account">My Account</string>
    <string name="description">Product Description :</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="search_product">Search Product</string>
    <string name="my_reward">My Rewards</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_order">My Orders</string>
</resources>
